# RomArchives

./: .gitignore  README.md  main.py  pyproject.toml  tui.tcss
conf/: application.json
utils/: helpers.py  platform.py  scraper.py
