[project]
name = "romarchives"
version = "0.1.0"
description = "App Downloader for Rom Megathread"
authors = [
    {name = "bignos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "textual (>=3.1.0,<4.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
